syntax = "proto3";

package linear;

option go_package = "./proto";

service Linear {
  rpc GetIssues (GetIssuesRequest) returns (GetIssuesResponse);
}

message Issue {
  string id = 1;
  string title = 2;
  // example: ENG-123
  string identifier = 3;
  string branchName = 4;
}

message GetIssuesRequest {
  string api_key = 1;
}

message GetIssuesResponse {
  repeated Issue issues = 1;
}